@@ -1,3 +1,6 @@
+* bug fix
+  * Properly ignore path prefix on omniauthable
+
 == 1.2.rc2
 
 * enhancements
